second-project/infra/k8s/orders-mongo-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-mongo
  template:
    metadata:
      labels:
        app: orders-mongo
    spec:
      containers:
        - name: orders-mongo
          image: mongo
          resources:
            limits:
              memory: "2Gi"
              cpu: "0.4"
---
apiVersion: v1
kind: Service
metadata:
  name: orders-mongo-srv
spec:
  type: ClusterIP
  selector:
    app: orders-mongo
  ports:
    - name: orders-mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
