second-project/infra/k8s/payments-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          image: vitor/payments
          resources:
            limits:
              memory: "1Gi"
              cpu: "0.4"
---
apiVersion: v1
kind: Service
metadata:
  name: payments-srv
spec:
  type: ClusterIP
  selector:
    app: payments
  ports:
    - name: payments
      protocol: TCP
      port: 3000
      targetPort: 3000
