second-project/infra/k8s/payments-mongo-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments-mongo
  template:
    metadata:
      labels:
        app: payments-mongo
    spec:
      containers:
        - name: payments-mongo
          image: mongo
          resources:
            limits:
              memory: "1Gi"
              cpu: "0.4"
---
apiVersion: v1
kind: Service
metadata:
  name: payments-mongo-srv
spec:
  type: ClusterIP
  selector:
    app: payments-mongo
  ports:
    - name: payments-mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
