second-project/infra/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    name: ingress-srv
spec:
  rules:
  - host: ticketing.dev
    http:
      paths:
      - pathType: Prefix
        path: "/api/v1/users/?(.*)"
        backend:
          service:
            name: auth-srv
            port:
              number: 3000
      - pathType: Prefix
        path: "/?(.*)"
        backend:
          service:
            name: client-srv
            port:
              number: 3000
